added covid 19 response  bg and sub-footer section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
      <section id="head">
         <div class="head_container">
-            <img  class ="bg-img" src="/assests/bg1.webp" alt="bg" >
+            <!-- <img  class ="bg-img" src="/assests/bg1.webp" alt="bg" > -->
             <div class="inside_head drk-bg   " >
                 
                 <div class="logo">
@@ -64,7 +64,7 @@
 
     <div id="zigzig">
         <div class="container ">
-            <div class="features flex">
+            <div class="features flex flex-content-between">
                 <div class="img">
                     <img src="/assests/1.2.svg" alt="feature1">
                 </div>
@@ -91,7 +91,7 @@
                 <div class="feature_txt flex-col">
                     <h2>Flawless homes with zero effort </h2>
                     <br>
-                    <p>All our homes come with basic amenities which you can complement with a furniture packages from our partners.</p>
+                    <p>Forget the chores and headaches, Leave it to us. Our professional hospitality team is at your service 24/7.</p>
                     <br>
 
                     <ul class="pointlist">
@@ -119,22 +119,22 @@
             </div>
             <div class="loc  ">
                 <div class="flex loc-item-wrap ">
-                    <h4 class="loc-item">Thane (W)</h4>
-                    <h4 class="loc-item">Thane (E)</h4>
-                    <h4 class="loc-item">Bhiwandi</h4>
-                    <h4 class="loc-item">Kalyan</h4>
+                    <h4 class="loc-item fs-14">Thane (W)</h4>
+                    <h4 class="loc-item fs-14">Thane (E)</h4>
+                    <h4 class="loc-item fs-14">Bhiwandi</h4>
+                    <h4 class="loc-item fs-14" >Kalyan</h4>
                 </div>
                 <div class="flex loc-item-wrap">
-                    <h4 class="loc-item">Shahapur</h4>
-                    <h4 class="loc-item">Ulhasnagar</h4>
-                    <h4 class="loc-item">Mokhada</h4>
-                    <h4 class="loc-item">Vasai</h4>
+                    <h4 class="loc-item fs-14">Shahapur</h4>
+                    <h4 class="loc-item fs-14">Ulhasnagar</h4>
+                    <h4 class="loc-item fs-14">Mokhada</h4>
+                    <h4 class="loc-item fs-14">Vasai</h4>
                 </div>
                 <div class="flex loc-item-wrap">
-                    <h4 class="loc-item">Jawhar</h4>
-                    <h4 class="loc-item">Palghar</h4>
-                    <h4 class="loc-item">Dahanu</h4>
-                    <h4 class="loc-item">Murbad</h4>
+                    <h4 class="loc-item fs-14">Jawhar</h4>
+                    <h4 class="loc-item fs-14">Palghar</h4>
+                    <h4 class="loc-item fs-14">Dahanu</h4>
+                    <h4 class="loc-item fs-14">Murbad</h4>
                 </div>
             </div>
             <div class="vistbtn">
@@ -210,16 +210,21 @@
 
 
     <div id="reponse">
-        <div class="container safety-response ">
-            <div class="safety-head ibm-text flex flex-content-row ">
-                <div class="bg-balls"></div>
-                <div class="safety-txt text-center">
-                    <h3 class="drk-blu-alt" >COVID-19 RESPONSE</h3>
-                    <h2>Your Safety is our priority</h2>
+        <div class="container safety-response " style="position: relative;">
+            <div class="safety-head ibm-text ">
+                <div class="bg-balls ">
+                    <div class="bg-big"></div>
+                    <div class="bg-sm"></div>
+                    <div class="bg-md bg-md-1"></div>
+                    <div class="bg-md"></div>
+                </div>
+                <div class="safety-txt text-center ibm-text">
+                    <h3 class="drk-blu-alt " >COVID-19 RESPONSE</h3>
+                    <h2> Your Safety is our priority</h2>
                     <p>Mandatory Health checks & training to ensure maximum <br> hygiene and safety for you and your loved ones.</p>
                 </div>
                 <div class="quarter-circle">
-                    <img src="/assests/Ellipse 8.svg" alt="ellipse">
+                    <!-- <img src="/assests/Ellipse 8.svg" alt="ellipse"> -->
                 </div>
             </div>
 
