--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <section id="head">
         <div class="head_container">
             <!-- <img  class ="bg-img" src="/assests/bg1.webp" alt="bg" > -->
-            <div class="inside_head drk-bg   " >
+            <div class="inside_head    " >
                 
                 <div class="logo">
                     <img src="/assests/Logo!.svg" alt="logo">
@@ -28,7 +28,7 @@
 
                 <div class="banner-feat flex flex-content-between">
                     <div class="banner-feat-item text-center">
-                        <img src="/assests/Digital Concierge.svg" alt="dc">
+                        <img src="/assests/DigitalConcierge-1.svg" alt="dc">
                         <br>
                         <p class=" ibm-text sub-orange-clr ">Cleaning <br> services</p>
 
@@ -63,7 +63,7 @@
     </section> 
 
     <div id="zigzig">
-        <div class="container ">
+        <div class="container  ">
             <div class="features flex flex-content-between">
                 <div class="img">
                     <img src="/assests/1.2.svg" alt="feature1">
@@ -149,7 +149,7 @@
         <div class="rent-container  lght-gray">
             <h2  class="text-center rent-head drk-blu">Why rent with Us?</h2>
             <div class="rent-feat ">
-                <div class="feat-item-wrap flex flex-content">
+                <div class="feat-item-wrap flex flex-content" >
                     <div class="feat-item flex-col flex-content">
                         <div>
                             <img src="/assests/Verified Homes.svg" alt="vh">
@@ -158,7 +158,7 @@
                         <h4 class="ibm-text">Verified apartments</h4>
                         <p class="sarabun-text">Carefully selected homes visited and quality-checked by our team of experts.</p>
                     </div>
-                    <div class="feat-item flex-col flex-content">
+                    <div class="feat-item flex-col flex-content" >
                         <div>
                             <img src="/assests/Repair and Maintenence.svg" alt="rm">
                         </div>
@@ -184,7 +184,7 @@
                         <h4 class="ibm-text">Cleaning services</h4>
                         <p class="sarabun-text">Regular cleaning so that your apartment is sparkly clean every day.</p>
                     </div>
-                    <div class="feat-item flex-col flex-content">
+                    <div class="feat-item flex-col flex-content" >
                         <div>
                             <img src="/assests/On Demand.svg" alt="od">
                         </div>
@@ -192,7 +192,7 @@
                         <h4 class="ibm-text">On-demand services</h4>
                         <p class="sarabun-text">Grocery shopping? dry cleaning, small errands? You ask, we take care of it.</p>
                     </div>
-                    <div class="feat-item flex-col flex-content">
+                    <div class="feat-item flex-col flex-content" >
                         <div>
                             <img src="/assests/Digital Concierge.svg" alt="support">
                         </div>
@@ -210,7 +210,7 @@
 
 
     <div id="reponse">
-        <div class="container safety-response " style="position: relative;">
+        <div class="container safety-response " >
             <div class="safety-head ibm-text ">
                 <div class="bg-balls ">
                     <div class="bg-big"></div>
@@ -281,38 +281,39 @@
     <div id="ready ">
         <div class="ready-container">
             <h2 class="text-center sarabun-text">Ready to move in?</h2>
-        </div>
-        <div class="lineup flex  " >
-            <img src="/assests/Group 153.svg" alt="1-c">
-            <img src="/assests/Line 1.png" alt="l-1">
-            <img src="/assests/Group 154.svg" alt="2-c">
-            <img src="/assests/Line 1.png" alt="l-1">
-            <img src="/assests/Group 155.svg" alt="3-c">
-        </div>
-        <div class="ready-text flex">
-            <div class="ready-feat">
-                <h3 class="sarabun-text h3-alt">Search easily.</h3>
+            <div class="lineup flex  " >
+                <img class="lineup-item" src="/assests/Group 153.svg" alt="1-c">
+                <img class="lineup-item" src="/assests/Line 1.png" alt="l-1">
+                <img  class="lineup-item" src="/assests/Group 154.svg" alt="2-c">
+                <img class="lineup-item" src="/assests/Line 1.png" alt="l-1">
+                <img class="lineup-item" src="/assests/Group 155.svg" alt="3-c">
+            </div>
+            <div class="ready-text flex">
+                <div class="ready-feat">
+                    <h3 class="sarabun-text h3-alt">Search easily.</h3>
+                    <br>
+                    <p class="ibm-text">Browse through our wide variety apartments. Arrange a visit or take a virtual tour with our 360º camera.</p>
+                </div>
+                <div class="ready-feat">
+                    <h3 class="sarabun-text h3-alt">Rent conveniently.</h3>
+                    <br>
+                    <p class="ibm-text">Call dibs on any place for Rs. 999, arrange all pre-move in details online. Opt for a furniture upgrade.</p>
+                </div>
+                <div class="ready-feat">
+                    <h3 class="sarabun-text h3-alt">Live comfortably.</h3>
+                    <br>
+                    <p class="ibm-text">Choose a service package and come home to a flawless apartment with shelves dusted and your bed made.</p>
+                </div>
+            </div>
+            <div class="ready-foot text-center flex-col flex-content-row">
+                <div class="txt"><h2 class="ibm-text">The new way to rent homes is here, it's time to change the way you Live.</h2></div>
                 <br>
-                <p class="ibm-text">Browse through our wide variety apartments. Arrange a visit or take a virtual tour with our 360º camera.</p>
-            </div>
-            <div class="ready-feat">
-                <h3 class="sarabun-text h3-alt">Rent conveniently.</h3>
-                <br>
-                <p class="ibm-text">Call dibs on any place for Rs. 999, arrange all pre-move in details online. Opt for a furniture upgrade.</p>
-            </div>
-            <div class="ready-feat">
-                <h3 class="sarabun-text h3-alt">Live comfortably.</h3>
-                <br>
-                <p class="ibm-text">Choose a service package and come home to a flawless apartment with shelves dusted and your bed made.</p>
+                <div class="vistbtn">
+                    <button class="primary-btn">Book a Visit today!</button>
+                </div>
             </div>
         </div>
-        <div class="ready-foot text-center flex-col flex-content-row">
-            <div class="txt"><h2 class="ibm-text">The new way to rent homes is here, it's time to change the way you Live.</h2></div>
-            <br>
-            <div class="vistbtn">
-                <button class="primary-btn">Book a Visit today!</button>
-            </div>
-        </div>
+        
 
     </div>
 
